# Logcat

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.cursor/rules/: filter-system.mdc  project-boundaries.mdc  react-components.mdc  rust-backend.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PRODUCT.md
scripts/: generate-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: adb.rs  commands.rs  filter.rs  lib.rs  main.rs  parser.rs
src/components/: FilterBar.tsx  LeftToolbar.tsx  LogList.tsx  SettingsPanel.tsx  StatusBar.tsx  Toolbar.tsx  index.ts
src/hooks/: index.ts  useAutoSelectDevice.ts  useDeviceMonitor.ts  useFilter.ts  useFilterWorker.ts  useLogStream.ts
src/lib/: utils.ts
src/stores/: logStore.ts
src/types/: index.ts
src/workers/: filter.worker.ts
